syntax = "proto3";
package snapshot.v1beta1;

option go_package = "github.com/axelarnetwork/axelar-core/x/snapshot/types";

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";

option (gogoproto.goproto_getters_all) = false;

message RegisterProxyRequest {
  bytes principal_addr = 1
      [ (gogoproto.casttype) =
            "github.com/cosmos/cosmos-sdk/types.ValAddress" ];
  bytes proxy_addr = 2 [ (gogoproto.casttype) =
                             "github.com/cosmos/cosmos-sdk/types.AccAddress" ];
}

message RegisterProxyResponse {}

message DeactivateProxyRequest {
  bytes principal_addr = 1
      [ (gogoproto.casttype) =
            "github.com/cosmos/cosmos-sdk/types.ValAddress" ];
}

message DeactivateProxyResponse {}
